package ca.ulaval.glo4002.game.interfaces.rest.resources.api.dtos;

public class ResourceRequest {
    public int qtyBurger;
    public int qtySalad;
    public int qtyWater;
}
