package ca.ulaval.glo4002.game.interfaces.rest.resources.api.dtos;

public class ResourceResponse {
    public int qtyBurger;
    public int qtySalad;
    public int qtyWater;
}
