package ca.ulaval.glo4002.game.interfaces.rest.resources.api.dtos;

public class ResourcesResponse {
    public ResourceResponse fresh;
    public ResourceResponse expired;
    public ResourceResponse consumed;
}
