@startuml

title __DTOS's Class Diagram__\n

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace resources.api {
        namespace dtos {
          class ca.ulaval.glo4002.game.interfaces.rest.resources.api.dtos.ResourceRequest {
              + qtyBurger : int
              + qtySalad : int
              + qtyWater : int
          }
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace resources.api {
        namespace dtos {
          class ca.ulaval.glo4002.game.interfaces.rest.resources.api.dtos.ResourceResponse {
              + qtyBurger : int
              + qtySalad : int
              + qtyWater : int
          }
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace resources.api {
        namespace dtos {
          class ca.ulaval.glo4002.game.interfaces.rest.resources.api.dtos.ResourcesResponse {
          }
        }
      }
    }
  }
  

  ca.ulaval.glo4002.game.interfaces.rest.resources.api.dtos.ResourcesResponse o-- ca.ulaval.glo4002.game.interfaces.rest.resources.api.dtos.ResourceResponse : consumed
  ca.ulaval.glo4002.game.interfaces.rest.resources.api.dtos.ResourcesResponse o-- ca.ulaval.glo4002.game.interfaces.rest.resources.api.dtos.ResourceResponse : expired
  ca.ulaval.glo4002.game.interfaces.rest.resources.api.dtos.ResourcesResponse o-- ca.ulaval.glo4002.game.interfaces.rest.resources.api.dtos.ResourceResponse : fresh


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
